website-kustomize/base/backend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: webapp
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: alterius/webapp-backend
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: webapp
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
  selector:
    app: backend
