website-kustomize/base/nginx.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: webapp
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: alterius/webapp-frontend
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-conf
              
---

apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: webapp
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: webserver
