website-kustomize/base/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: webapp
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      # volumes:
      # - name: postgres-pvc
      #   persistentVolumeClaim:
      #     claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - name: postgres-pvc
          mountPath: /var/lib/postgresql/django
  volumeClaimTemplates:
  - metadata:
      name: postgres-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: webapp
  labels:
    svc: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: postgres
  clusterIP: None
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: postgres-pvc
#   namespace: webapp
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 5Gi
