website-kustomize/base/webserver-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-frontend-ingress
  namespace: webapp
spec:
  tls:
  - hosts:
    - alterai.pl
    secretName: alterai-pl-tls
  rules:
  - host: alterai.pl
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              number: 80
